Correctly hide scrollbars

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -75,10 +75,6 @@ footer {
   opacity: 1;
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
-
 @media (max-width: 1024px) {
   #root {
     min-height: 300vh;
