--- a/src/styles/paldeaPokedex.css
+++ b/src/styles/paldeaPokedex.css
@@ -16,6 +16,12 @@
   justify-content: center;
   flex-wrap: wrap;
   overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.entry-container::-webkit-scrollbar {
+  display: none;
 }
 
 .entry {
